Partial Fix for #238 Removes extra space below graph.

--- a/nexus/static/css/base.css
+++ b/nexus/static/css/base.css
@@ -690,7 +690,7 @@ nav span.FilterTitle {
 
 #canvas.viz {
     width: 80%;
-    height: 600px;
+    max-height: 600px;
     display:flex;
     /* border:1px solid var(--logo-dark-purple); */
 }
